# dotfiles

./: .gitignore  README.md  USAGE_bootstrap_python_project.md
home/: .p10k.zsh  .zsh_plugins.txt  .zshrc  settings.html
home/.claude/: CLAUDE.md  keybindings.json
home/.claude/commands/: save-knowledge2.md
home/.config/nvim/: init.lua
home/.config/tmux/: KEYBINDINGS.md  tmux.conf
home/.config/tmux/scripts/: cc-dashboard.sh  cc-help.sh  cc-mdview.sh  cc-tree.sh  cc-workspace.sh  claude-layout.sh  claude-log.sh  render_transcript.py
home/.config/wezterm/: wezterm.lua
home/Projects/: CLAUDE.md  pyproject.toml
scripts/: bootstrap_mac_full_auto.sh  bootstrap_python_base.sh  bootstrap_python_project.sh  install-ndlocr-lite.sh  setup_sounds_env.sh
